--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_Filter.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_Filter.cshtml
@@ -40,7 +40,7 @@
 								var index = 1;
 								foreach (var city in Model.Cities)
 								{
-									<li data-value="@city">
+									<li data-value="@city.Value">
 										@city
 									</li>
 									index++;
