--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_Layout.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_Layout.cshtml
@@ -28,31 +28,34 @@
 	</div>
 	@RenderBody()
 </div>
-	@Html.Partial("_Footer")
-    <div class="modals">
-        <div class="modals--overlay js-modals-close"></div>
-		<div class="modals--item" id="authModal">
-			<div class="modals--title">Вход и регистрация</div>
-			@Html.Partial("_LoginForm", new LoginViewModel(){ReturnUrl = "/"})
-		</div>    
-	</div>
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
-        <script src="~/js/events.js" asp-append-version="true"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+@Html.Partial("_Footer")
+<div class="modals">
+	<div class="modals--overlay js-modals-close"></div>
+	<div class="modals--item" id="authModal">
+		<div class="modals--title">Вход и регистрация</div>
+		<div class="modals--body">
+			@Html.Partial("_LoginForm", new LoginViewModel() { ReturnUrl = "/" })
+		</div>
+	</div>    
+</div>
+<environment include="Development">
+	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
+	<script src="~/scripts/site_script.js" asp-append-version="true"></script>
+	<script src="~/js/events.js" asp-append-version="true"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+</environment>
+<environment exclude="Development">
+	<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+			asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+			asp-fallback-test="window.jQuery"
+			crossorigin="anonymous"
+			integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+	</script>
+	<script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
+	<script src="~/js/site.min.js" asp-append-version="true"></script>
+</environment>
 
-    @RenderSection("Scripts", required: false)
+@RenderSection("Scripts", required: false)
 </body>
 </html>
