event page (косяки в верстке бы поправить при прокрутке вверх и фиксацией блока в данными мероприятия)

--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -21,8 +21,13 @@
 		    <input class="form-control" asp-for="Url" placeholder="Url"/>
 		    <span asp-validation-for="Url" class="text-danger"></span>
 	    </div>
+		
+		<div class="form-group">
+			<input class="form-control" asp-for="Label" placeholder="Подпись"/>
+			<span asp-validation-for="Label" class="text-danger"></span>
+		</div>
 
-	    <div class="form-group">
+		<div class="form-group">
 		    @Html.DropDownListFor(x => x.CategoryId, Model.Categories, null, new {@class = "form-control"})
 		    <span asp-validation-for="CategoryId"></span>
 	    </div>
