--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @model BeeFee.WebApplication.Models.Event.EventFilterViewModel
 @{
     ViewData["Title"] = "Home Page";
+	Layout = "_LayoutMain";
 }
 @section fixed_header
 {
