--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
@@ -12,16 +12,21 @@
     <div class="container">
         
         <div class="form-group">
-            <input class="form-control" asp-for="Name" placeholder="Name"/>
+            <input class="form-control" asp-for="Name" placeholder="Название мероприяние"/>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
-	    <div class="form-group">
+		<div class="form-group">
 		    <input class="form-control" asp-for="Url" placeholder="Url"/>
 		    <span asp-validation-for="Url" class="text-danger"></span>
 	    </div>
 
-	    <div class="form-group">
+		<div class="form-group">
+			<input class="form-control" asp-for="Label" placeholder="Подпись"/>
+			<span asp-validation-for="Label" class="text-danger"></span>
+		</div>
+
+		<div class="form-group">
             @Html.DropDownListFor(x => x.CategoryId, Model.Categories, null, new {@class = "form-control"})
 	        <span asp-validation-for="CategoryId"></span>
         </div>
@@ -114,9 +119,10 @@
 				var $this = $(this);
 				var fd = new FormData;
 				fd.append('file', $this.prop('files')[0]);
-				//fd.append('sizes', [{width: 100, height: 100}]);
-				fd.append('sizes[0].width', 368);
-				fd.append('sizes[0].height', 190);
+				fd.append('sizes[0].width', 1023);
+				fd.append('sizes[0].height', 600);
+				fd.append('sizes[1].width', 368);
+				fd.append('sizes[1].height', 190);
 				$.ajax({
 					url: '@(BeeFeeWebAppSettings.Instance.ImagesUrl)/api/home',
 					contentType: false,
