--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
@@ -1,10 +1,11 @@
-﻿@model BeeFee.ClientApp.Projections.Event.EventProjection
+﻿@using BeeFee.WebApplication.Infrastructure
+@model BeeFee.ClientApp.Projections.Event.EventProjection
 @{
     ViewData["Title"] = Model.Page.Title;
 }
 <div class="event">
 	<div data-fixed-wrap="info">
-		<div class="event-intro hidden-xs" style="background-image: url(/images/intro.png);">
+		<div class="event-intro hidden-xs" style="background-image: url('@(Url.GetImageUrl(Model.Page.Cover, 1023, 600))');">
 			<div class="container">
 				<div class="event-intro--in">
 					<div class="event-intro--box">
@@ -12,11 +13,11 @@
 							<h1 class="event-intro--title"><span>@Model.Page.Caption</span></h1>
 						</div>
 					</div>
-					<div class="event-intro--desc">Долгожданный концерт в Екатеринбурге уже этим летом</div>
+					<div class="event-intro--desc">@Model.Page.Label</div>
 				</div>
 			</div>
 		</div>
-		<div class="event-intro visible-xs" style="background-image: url(/images/intro.png);">
+		<div class="event-intro visible-xs" style="background-image: url('@(Url.GetImageUrl(Model.Page.Cover, 1023, 600))');">
 			<h1 class="event-intro--title">@Model.Page.Caption</h1>
 		</div>
 		<div class="container">
@@ -109,7 +110,7 @@
 </div>
 </div>
 
-@section fixed_header
+@*@section fixed_header
 {
 	<div class="fixed-box--r" data-fixed="info">
 		<div class="container">
@@ -127,12 +128,11 @@
 							<div class="info--field"><a class="event-field" href="#"><i class="icon-marker"></i>@Model.Page.Address.City, @Model.Page.Address.AddressString</a>
 							</div>
 						</div>
-						@*<div class="col-md-6">
+						<div class="col-md-6">
 							<div class="info--field">
-								<div class="event-field"><i class="icon-ticket"></i>от 2000₽ до 5000₽
-								</div>
+								<div class="event-field"><i class="icon-ticket"></i>Бесплатная регистрация</div>
 							</div>
-						</div>*@
+						</div>
 						<div class="col-md-6">
 							<div class="info--field"><a class="event-field" href="#"><i class="icon-mail"></i>Написать организаторам</a>
 							</div>
@@ -142,4 +142,4 @@
 			</div>
 		</div>
 	</div>
-}
+}*@
