--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_Layout.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_Layout.cshtml
@@ -49,14 +49,13 @@
 		<script src="~/js/site.js" asp-append-version="true"></script>
 	</environment>
 	<environment exclude="Development">
-		<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-				asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-				asp-fallback-test="window.jQuery"
-				crossorigin="anonymous"
-				integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-		</script>
+		<script src="~/lib/jquery/dist/jquery.js"></script>
+		<script src="~/lib/sticky-kit/jquery.sticky-kit.js"></script>
 		<script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
-		<script src="~/js/site.min.js" asp-append-version="true"></script>
+		@*<script src="~/lib/ScrollToFixed/jquery-scrolltofixed.js" asp-append-version="true"></script>*@
+		<script src="~/scripts/site_script.js" asp-append-version="true"></script>
+		<script src="~/js/events.js" asp-append-version="true"></script>
+		<script src="~/js/site.js" asp-append-version="true"></script>
 	</environment>
 
 	@RenderSection("Scripts", required: false)
