--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenu.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenu.cshtml
@@ -2,7 +2,7 @@
 	<a class="header--logo" href="#">@*<img src="#" alt="" />*@</a>
 	<nav class="header--nav hidden-xs">
 		<ul class="header--list">
-			<li class="header--item"><a href="#">События</a></li>
+			<li class="header--item"><a href="/">События</a></li>
 			<li class="header--item"><a href="#">Организаторы</a></li>
 			<li class="header--item"><a href="#">Новости сервиса</a></li>
 		</ul>
