--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Login.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Login.cshtml
@@ -1,19 +1,39 @@
 ﻿@using BeeFee.WebApplication.Models.Account
 @model BeeFee.WebApplication.Models.Account.LoginViewModel
 
-<h2>Login.</h2>
-<div class="row">
-	<div class="col-md-8">
-		<section>
-			<form asp-controller="Account" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl" method="post" class="form-horizontal">
-				<div>Login: <input name="login" /></div>
-				<div>Password: <input name="pass" type="password" /></div>
-				<div class="form-group">
-					<div class="col-md-offset-2 col-md-10">
-						<button type="submit" class="btn btn-default">Log in</button>
-					</div>
+<div class="container">
+<div class="event-text">
+	<h2>Вход</h2>
+	<form id="loginForm" asp-action="Login" asp-controller="Account" asp-area="" method="post">
+		@Html.HiddenFor(x => x.ReturnUrl)
+		<div class="modals--field">
+			<div class="input-field@(!String.IsNullOrEmpty(Model.Login)?" with-focus":null)">
+				<div class="input-field--b">
+					<label class="input-field--l">Электронная почта</label>
+					@Html.TextBoxFor(x => x.Login, new { @class = "input-field--i" })
 				</div>
-			</form>
-		</section>
-	</div>
+				<div class="input-field--t"></div>
+			</div>
+		</div>
+		<div class="modals--field">
+			<div class="input-field">
+				<div class="input-field--b">
+					<label class="input-field--l">Пароль</label>
+					@Html.PasswordFor(x => x.Pass, new { @class = "input-field--i" })
+				</div>
+				<div class="input-field--t"></div>
+			</div>
+		</div>
+		<div>@Html.ValidationMessage("error")</div>
+		<div class="modals--submit">
+			<button class="btn is-block" type="submit">Вход</button>
+		</div>
+		<div class="modals--socials">
+			<div class="modals--socials-t">Войти через социальную сеть</div>
+			<div class="modals--socials-l">
+				<a class="modals--social" href="#"><i class="icon-vkontakte"></i></a><a class="modals--social" href="#"><i class="icon-facebook"></i></a><a class="modals--social" href="#"><i class="icon-twitter"></i></a>
+			</div>
+		</div>
+	</form>
+</div>
 </div>
