--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutMain.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutMain.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <environment include="Development">
-        <link rel="stylesheet" href="~/css/site.css" />
+		<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
@@ -39,14 +39,14 @@
 	</div>    
 </div>
 <environment include="Development">
-	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<script src="~/js/jquery.min.js" asp-append-version="true"></script>
 	<script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
 	<script src="~/scripts/site_script.js" asp-append-version="true"></script>
 	<script src="~/js/events.js" asp-append-version="true"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 </environment>
 <environment exclude="Development">
-	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<script src="~/js/jquery.min.js" asp-append-version="true"></script>
 	<script src="~/lib/datetimepicker/build/jquery.datetimepicker.full.js"></script>
 	<script src="~/scripts/site_script.js" asp-append-version="true"></script>
 	<script src="~/js/events.js" asp-append-version="true"></script>
