--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -10,6 +10,7 @@
 
 <form asp-action="Edit" asp-controller="Event" asp-route-id="@Model.Id" method="post" class="form-horizontal">
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
+	<input type="hidden" asp-for="CompanyId" />
 	<input type="hidden" asp-for="Version"/>
     <div class="container">
 
