--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
@@ -8,7 +8,8 @@
 <h2>Add</h2>
 
 <form asp-action="Add" asp-controller="Event" method="post" class="form-horizontal">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
+	<div class="validation" asp-validation-summary="ModelOnly"></div>
+	<input type="hidden" asp-for="CompanyId" />
     <div class="container">
         
         <div class="form-group">
@@ -86,8 +87,10 @@
 	    <div class="form-group">
             <textarea class="form-control" rows="10" placeholder="HTML here" asp-for="Html" id="html"></textarea>
         </div>
+		
+		@Html.ValidationSummary()
 
-        <div class="form-group">
+		<div class="form-group">
             <input type="submit" value="Save" class="btn"/>
         </div>
     </div>
