--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Index.cshtml
@@ -31,8 +31,8 @@
                 <td>@e.Address.AddressString</td>
                 <td>@(e.Prices?.FirstOrDefault().Price.ToString())</td>
                 <td>
-					<a asp-action="Edit" asp-route-id="@e.Id">Edit</a>
-	                <a asp-action="Remove" asp-route-id="@e.Id" asp-route-version="@e.Version">Remove</a>
+					<a asp-action="Edit" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" >Edit</a>
+	                <a asp-action="Remove" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version">Remove</a>
                 </td>
             </tr>
         }
@@ -47,4 +47,4 @@ else
     </div>
 }
 <br /><br />
-<a asp-action="Add">Add</a>
+<a asp-action="Add" asp-route-companyId="@ViewBag.CompanyId" >Add</a>
