--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
@@ -4,5 +4,5 @@
 }
 @if (User.IsInRole("organizer"))
 {
-	<li><a asp-area="Org" asp-controller="Event" asp-action="Index">My Events</a></li>
+	<li><a asp-area="Org" asp-controller="Company" asp-action="Index">My Companies</a></li>
 }
