--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/Index.cshtml
@@ -1,32 +1,31 @@
 @model BeeFee.WebApplication.Models.Event.EventFilterViewModel
 @{
     ViewData["Title"] = "Home Page";
-	Layout = "_LayoutMain";
+    Layout = "_LayoutMain";
 }
 @section fixed_header
-{
+    {
     <div class="fixed-box--r" data-fixed="filter">
         <div class="container"><a class="filter--head in-fixed" href="#" data-goto="filter">Все события в городе Екатеринбург в ближайшее время</a></div>
     </div>
 }
 <div class="intro hidden-xs" style="background-image: url(/images/intro.png);">
-	<div class="intro--box">
-		<div class="container">
-			<div class="intro--title">Создай своё событие</div>
-			<div class="intro--text">И расскажи о нём всем</div>
-			<div class="intro--btn"><a class="btn is-block is-sm" href="#">Начать</a></div>
-		</div>
-	</div>
+    <div class="intro--box">
+        <div class="container">
+            <div class="intro--title">Создай своё событие</div>
+            <div class="intro--text">И расскажи о нём всем</div>
+            <div class="intro--btn"><a class="btn is-block is-sm" href="#">Начать</a></div>
+        </div>
+    </div>
 </div>
 @Html.Partial("_Filter")
 <div class="page--in">
     <div class="container">
         <div class="grid">
             <div class="row">
-				@foreach (var item in Model.Events)
-				{
-					Html.RenderPartial("_EventGridItem", item);
-				}
+                @{
+                    Html.RenderPartial("_EventGrid", Model.Events);
+                }
             </div>
         </div>
         @*<div class="loader"></div>*@
