--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_Filter.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_Filter.cshtml
@@ -1,141 +1,161 @@
-﻿@model BeeFee.WebApplication.Models.Event.EventFilterViewModel
+@using BeeFee.Model.Embed
+@model BeeFee.WebApplication.Models.Event.EventFilterViewModel
 
 <div class="filter" data-fixed-wrap="filter">
-<div class="container"><a class="filter--head" href="#" data-toggle="filter">Все события в городе Екатеринбург в ближайшее время</a>
-</div>
-<div class="filter--body">
-	<div class="container">
-		<form>
-<div class="filter--in hidden-xs">
-	<div class="filter--field">
-		<div class="vertical-field">
-			<div class="row">
-				<div class="col-xs-4 col-md-3">
-					<label class="vertical-field--l"><span>Поиск по ключевым словам</span></label>
-				</div>
-				<div class="col-xs-4 col-md-6">
-					@Html.TextBoxFor(x => x.Text, new {@class = "vertical-field--i", id = "txtSearchText1", placeholder = "текст для поиска..."})
-				</div>
-				<div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
-					<div class="vertical-field--t"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="filter--field">
-		<div class="vertical-field">
-			<div class="row">
-				<div class="col-xs-4 col-md-3">
-					<label class="vertical-field--l"><span>Выберите город</span></label>
-				</div>
-				<div class="col-xs-4 col-md-6">
-					<div class="select">
-						<input class="select_hidden" id="selectCity1" type="hidden" value="@(Model.Cities.FirstOrDefault(x => x.Selected)?.Text)"/>
-						<div class="select_in">
-							<div class="select_title"><span class="select_placeholder">Выберите город</span>
-							</div>
-						</div>
-						<ul class="select_list">
-							@{
-								var index = 1;
-								foreach (var city in Model.Cities)
-								{
-									<li data-value="@city.Text">
-										@city.Text
-									</li>
-									index++;
-								}
-							}
-						</ul>
-					</div>
-				</div>
-				<div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
-					<div class="vertical-field--t"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="filter--field">
-		<div class="vertical-field">
-			<div class="row">
-				<div class="col-xs-4 col-md-3">
-					<label class="vertical-field--l"><span>Выберите даты</span></label>
-				</div>
-				<div class="col-xs-4 col-md-4">
-					<div class="vertical-field--d">
-						<input class="vertical-field--i js-date" type="text" id="endDate1" value="@Model.EndDate.Date.ToString("dd.MM.yyyy")"/>
-					</div>
-				</div>
-				<div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
-					<div class="vertical-field--t"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="filter--field">
-		<div class="vertical-field">
-			<div class="row">
-				<div class="col-xs-4 col-md-3">
-					<label class="vertical-field--l"><span>Выберите тип</span></label>
-				</div>
-				<div class="col-xs-4 col-md-9">
-					<div class="vertical-field--c">
-						<div class="row">
-							<div class="col-xs-2 col-md-3">
-								<label class="checkbox">
-									<input class="checkbox--input" type="checkbox" checked="checked" id="chkConcert1"/>
-									<div class="checkbox--label">Концерт</div>
-								</label>
-							</div>
-							<div class="col-xs-2 col-md-3">
-								<label class="checkbox">
-									<input class="checkbox--input" type="checkbox" checked="checked" id="chkExhibition1"/>
-									<div class="checkbox--label">Выставка</div>
-								</label>
-							</div>
-							<div class="col-xs-2 col-md-3">
-								<label class="checkbox">
-									<input class="checkbox--input" type="checkbox" checked="checked" id="chkExcursion1"/>
-									<div class="checkbox--label">Экскурсия</div>
-								</label>
-							</div>
-							<div class="col-xs-2 col-md-3">
-								<label class="checkbox">
-									<input class="checkbox--input" type="checkbox" checked="checked" data-checkboxes="total"/>
-									<div class="checkbox--label">Все типы</div>
-								</label>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
-					<div class="vertical-field--t"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="filter--field">
-		<div class="vertical-field">
-			<div class="row">
-				<div class="col-xs-4 col-md-3">
-					<label class="vertical-field--l"><span>Максимальная цена билета</span></label>
-				</div>
-				<div class="col-xs-4 col-md-6">
-					<input class="vertical-field--i" type="text" id="maxPrice1"/>
-				</div>
-				<div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
-					<div class="vertical-field--t"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-4 col-md-6 col-md-offset-l-3">
-			<button class="btn is-block" type="submit" id="btnLoad1">Найти мероприятия</button>
-		</div>
-	</div>
-</div>
-		</form>
-</div>
-</div>
+    <div class="container">
+        <a class="filter--head" href="#" data-toggle="filter">Все события в городе Екатеринбург в ближайшее время</a>
+    </div>
+    <div class="filter--body">
+        <div class="container">
+            <form>
+                <div class="filter--in hidden-xs">
+                    <div class="filter--field">
+                        <div class="vertical-field">
+                            <div class="row">
+                                <div class="col-xs-4 col-md-3">
+                                    <label class="vertical-field--l"><span>Поиск по ключевым словам</span></label>
+                                </div>
+                                <div class="col-xs-4 col-md-6">
+                                    @Html.TextBoxFor(x => x.Text, new { @class = "vertical-field--i", id = "txtSearchText1", placeholder = "текст для поиска..." })
+                                </div>
+                                <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
+                                    <div class="vertical-field--t"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter--field">
+                        <div class="vertical-field">
+                            <div class="row">
+                                <div class="col-xs-4 col-md-3">
+                                    <label class="vertical-field--l"><span>Выберите город</span></label>
+                                </div>
+                                <div class="col-xs-4 col-md-6">
+                                    <div class="select">
+                                        @Html.HiddenFor(x => x.City, new { @class = "select_hidden", id = "selectCity1" })
+                                        @*<input class="select_hidden" id="selectCity1" type="hidden" value="@(Model.Cities.FirstOrDefault(x => x.Selected)?.Text)"/>*@
+                                        <div class="select_in">
+                                            <div class="select_title">
+                                                <span class="select_placeholder">Выберите город</span>
+                                            </div>
+                                        </div>
+                                        <ul class="select_list">
+                                            @{
+                                                var index = 1;
+                                                foreach (var city in Model.Cities)
+                                                {
+                                                    <li data-value="@city.Text">
+                                                        @city.Text
+                                                    </li>
+                                                    index++;
+                                                }
+                                            }
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
+                                    <div class="vertical-field--t"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter--field">
+                        <div class="vertical-field">
+                            <div class="row">
+                                <div class="col-xs-4 col-md-3">
+                                    <label class="vertical-field--l"><span>Выберите даты</span></label>
+                                </div>
+                                <div class="col-xs-4 col-md-4">
+                                    <div class="vertical-field--d">
+                                        @*@Html.TextBoxFor(x => x.EndDate, new { @class = "vertical-field--i js-date", id = "endDate1" })*@
+                                        <input name="@Html.NameFor(x=>x.EndDate)" class="vertical-field--i js-date" type="text" id="endDate1" value="@Model.EndDate.Date.ToString("dd.MM.yyyy")" />
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
+                                    <div class="vertical-field--t"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter--field">
+                        <div class="vertical-field">
+                            <div class="row">
+                                <div class="col-xs-4 col-md-3">
+                                    <label class="vertical-field--l"><span>Выберите тип</span></label>
+                                </div>
+                                <div class="col-xs-4 col-md-9">
+                                    <div class="vertical-field--c">
+                                        <div class="row">
+                                            @{
+                                                var allChecked = true;
+                                                foreach (EEventType type in Enum.GetValues(typeof(EEventType)))
+                                                {
+                                                    if (type == EEventType.None)
+                                                    {
+                                                        continue;
+                                                    }
+                                                    //когда придумаем что сделать с языками - можно перенести в переводы, или сделать в description перечислений
+                                                    var title = "Выставка";
+                                                    if (type == EEventType.Concert)
+                                                    {
+                                                        title = "Концерт";
+                                                    }
+                                                    if (type == EEventType.Excursion)
+                                                    {
+                                                        title = "Экскурсия";
+                                                    }
+                                                    var isChecked = Model.Types == null || Model.Types.Contains(type);
+                                                    if (!isChecked)
+                                                    {
+                                                        allChecked = false;
+                                                    }
+                                                     <div class="col-xs-2 col-md-3">
+                                                         <label class="checkbox">
+                                                             <input value="@((int) type)" name="Types" class="checkbox--input" type="checkbox" @(isChecked ? "checked=\"checked\"" : "") id="chk@(type)"/>
+                                                             <div class="checkbox--label">@title</div>
+                                                         </label>
+                                                     </div>
+                                                 }
+
+                                                <div class="col-xs-2 col-md-3">
+                                                    <label class="checkbox">
+                                                        <input class="checkbox--input" type="checkbox" @(allChecked ? "checked=\"checked\"" : "")  data-checkboxes="total"/>
+                                                        <div class="checkbox--label">Все типы</div>
+                                                    </label>
+                                                </div>
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
+                                    <div class="vertical-field--t"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter--field">
+                        <div class="vertical-field">
+                            <div class="row">
+                                <div class="col-xs-4 col-md-3">
+                                    <label class="vertical-field--l"><span>Максимальная цена билета</span></label>
+                                </div>
+                                <div class="col-xs-4 col-md-6">
+                                    @Html.TextBoxFor(x => x.MaxPrice, new { @class = "vertical-field--i", id = "maxPrice1" })
+                                    @*<input class="vertical-field--i" type="text" id="maxPrice1"/>*@
+                                </div>
+                                <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
+                                    <div class="vertical-field--t"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-md-6 col-md-offset-l-3">
+                            <button class="btn is-block" type="submit" id="btnLoad1">Найти мероприятия</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
