поправлена подгрузка мероприятий яваскриптом на главной странице+добавлена маска для нмоера телефона при регистрации на странице мероприятия

--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
@@ -160,6 +160,13 @@
 @section after_footer{
     <div class="hidden-xs" style="height: 156px;"></div>
 }
+@section Scripts{
+    <script type="text/javascript">
+        $(function() {
+            initEventPage('.phone-number');
+        });
+    </script>
+}
 
 @*@section fixed_header
     {
