--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/_RegisterToEventForm.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/_RegisterToEventForm.cshtml
@@ -18,7 +18,7 @@
                 <div class="input-field">
                     <div class="input-field--b">
                         <label class="input-field--l">Номер телефона</label>
-                        @Html.TextBoxFor(x => x.Phone, new { @class = "input-field--i" })
+                        @Html.TextBoxFor(x => x.Phone, new { @class = "input-field--i phone-number" })
                     </div>
                     <div class="input-field--t"></div>
                 </div>
