--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -11,7 +11,8 @@
 <form asp-action="Edit" asp-controller="Event" asp-route-id="@Model.Id" method="post" class="form-horizontal">
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
 	<input type="hidden" asp-for="CompanyId" />
-	<input type="hidden" asp-for="Version"/>
+	<input type="hidden" asp-for="Version" />
+	<input type="hidden" asp-for="ImagesKey"/>
     <div class="container">
 
         <div class="form-group">
@@ -84,7 +85,7 @@
 		    <input class="form-control" placeholder="Cover" type="file" id="file" />
 			@if (!String.IsNullOrEmpty(Model.Cover))
 			{
-				<img src="@Url.GetImageUrl(Model.Cover, 368, 190)"/>
+				<img src="@Url.GetImageUrl(Model.Url, Model.Cover, 368, 190)"/>
 			}
 		    <input type="hidden" class="form-control" placeholder="Cover" asp-for="Cover"/>
 	    </div>
@@ -124,6 +125,8 @@
 		        var fd = new FormData;
 		        fd.append('file', $this.prop('files')[0]);
 				fd.append('setting', 'event');
+				fd.append('eventName', '@(Model.Url)');
+				fd.append('key', '@(Model.ImagesKey)');
 		        $.ajax({
 					url: '@(BeeFeeWebAppSettings.Instance.ImagesUrl)/api/home',
 			        contentType: false,
@@ -138,7 +141,7 @@
 							return;
 						}
 						$this.next("img").remove();
-				        $this.after("<img src='@(BeeFeeWebAppSettings.Instance.ImagesUrl)/368x190/" + data.path + "' />");
+				        $this.after("<img src='@(BeeFeeWebAppSettings.Instance.ImagesUrl)/min/@(Model.Url)/368x190/" + data.path + "' />");
 				        $("#Cover").val(data.path);
 			        }
 		        });
