--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Edit.cshtml
@@ -16,6 +16,11 @@
 		</div>
 
 		<div class="form-group">
+			<input class="form-control" asp-for="Email" placeholder="Email" />
+			<span asp-validation-for="Email" class="text-danger"></span>
+		</div>
+
+		<div class="form-group">
 			<input type="submit" value="Save" class="btn" />
 		</div>
 	</div>
