--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
@@ -35,8 +35,13 @@
         <div class="form-group">
             @Html.DropDownListFor(x => x.Type, Html.GetEnumSelectList<EEventType>(), null, new {@class = "form-control"})
         </div>
+
+		<div class="form-group">
+			<input class="form-control" asp-for="Email" placeholder="Email для обратной связи" />
+			<span asp-validation-for="Email" class="text-danger"></span>
+		</div>
         
-        <div class="form-group">
+		<div class="form-group">
             <input type="text" class="form-control" asp-for="City" placeholder="City" />
             <span asp-validation-for="City"></span>
         </div>
