--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -12,7 +12,6 @@
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
 	<input type="hidden" asp-for="CompanyId" />
 	<input type="hidden" asp-for="Version" />
-	<input type="hidden" asp-for="ImagesKey"/>
     <div class="container">
 
         <div class="form-group">
@@ -38,7 +37,12 @@
             @Html.DropDownListFor(x => x.Type, Html.GetEnumSelectList<EEventType>(), null, new {@class = "form-control"})
         </div>
 
-        <div class="form-group">
+		<div class="form-group">
+			<input class="form-control" asp-for="Email" placeholder="Email для обратной связи"/>
+			<span asp-validation-for="Email" class="text-danger"></span>
+		</div>
+
+		<div class="form-group">
             <input type="text" class="form-control" asp-for="City" placeholder="City"/>
             <span asp-validation-for="City"></span>
         </div>
@@ -125,6 +129,7 @@
 		        var fd = new FormData;
 		        fd.append('file', $this.prop('files')[0]);
 				fd.append('setting', 'event');
+				fd.append('companyName', '@(Model.CompanyUrl)');
 				fd.append('eventName', '@(Model.Url)');
 				fd.append('key', '@(Model.ImagesKey)');
 		        $.ajax({
