--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
@@ -1,4 +1,5 @@
-﻿@if (User.IsInRole("admin"))
+﻿@model BeeFee.WebApplication.Models.Account.ProfileEditModel
+@if (User.IsInRole("admin"))
 {
 	<li><a asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a></li>
 }
@@ -6,3 +7,18 @@
 {
 	<li><a asp-area="Org" asp-controller="Company" asp-action="Index">My Companies</a></li>
 }
+
+<form method="post" class="form-horizontal">
+	<div class="validation" asp-validation-summary="ModelOnly"></div>
+	<div class="container">
+
+		<div class="form-group">
+			<input class="form-control" asp-for="Name" placeholder="Название компании" />
+			<span asp-validation-for="Name" class="text-danger"></span>
+		</div>
+
+		<div class="form-group">
+			<input type="submit" value="Save" class="btn" />
+		</div>
+	</div>
+</form>
